test(android): use compatible file read helper